# flask-easy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  test.yaml
src/flask_easy/: __init__.py  api_spec.py  auth.py  database.py  extensions.py  factory.py  instance.py  log.py  response.py  result.py  security.py  validator.py
src/flask_easy/exc/: __init__.py  app_exceptions.py  handler.py  setup_exceptions.py
src/flask_easy/generators/: __init__.py  resource_generator.py
src/flask_easy/repository/: __init__.py  alchemy_sql_repository.py  crud_repository.py  crud_repository_interface.py  mongo.py  mongo_base_repository.py  mongo_repository.py  peewee_sql_repository.py  repository_interface.py  sql.py  sql_base_repository.py  sql_repository.py
src/flask_easy/scripts/: cli.py  easy_scripts.py
src/flask_easy/scripts/resources/: __init__.py  model.py  repository.py  utils.py  views.py
tests/test_instance/: conftest.py  example.db  test_commands.py  test_database.py  test_sql.py  test_sql_respository.py  urls.py
