[metadata]
name = Flask-Easy
version = attr: flask_easy.__version__
license = BSD
author = Joseph Maclean Arhin
author_email = me@josephmaclean.dev
long_description = file: README.md
long_description_content_type=text/markdown
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
zip_safe = False
package_dir =
    =src
packages = find_namespace:
include = copier*
python_requires = >=3.8

[options.packages.find]
where = src
